--- a/Web/src/main/resources/templates/thymeleaf.html
+++ b/Web/src/main/resources/templates/thymeleaf.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>hello thymeleaf.html</h1>
     <div th:text="${thymeleaf}">
 
         这是直接访问静态资源
