--- a/Web/src/main/resources/templates/login.html
+++ b/Web/src/main/resources/templates/login.html
@@ -5,9 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<!--<link rel="shortcut icon" th:href="@{/favicon.ico}"/>
-		<link rel="bookmark" th:href="@{/favicon.ico}"/>-->
 		<title>Signin Template for Bootstrap</title>
+
+		<link rel="shortcut icon" th:href="@{/favicon.ico}"/>
+		<link rel="bookmark" th:href="@{/favicon.ico}"/>
 		<!-- Bootstrap core CSS -->
 		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
