--- a/Web/src/main/resources/templates/emp/add.html
+++ b/Web/src/main/resources/templates/emp/add.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,48 +42,55 @@
 	</head>
 
 	<body>
-		<!--thymeleaf: 解析dashboard会使用前后缀的命名规则-->
+
+		<!--引入顶部栏-->
 		<div th:replace="~{commons/bar::topbar}"></div>
 
 		<div class="container-fluid">
 			<div class="row">
-
 				<!--引入侧边栏-->
 				<div th:replace="~{commons/bar::#sidebar(activeUri='emps')}"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h1><a class="btn btn-success" th:href="@{/emp}">添加员工</a></h1>
-					<div class="table-responsive">
-						<table class="table table-striped table-sm">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>lastName</th>
-									<th>email</th>
-									<th>gender</th>
-									<th>department</th>
-									<th>birth</th>
-									<th>操作</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="emp:${emps}">
-									<td th:text="${emp.id}"></td>
-									<td>[[${emp.lastName}]]</td>
-									<td th:text="${emp.email}"></td>
-									<td th:text="${emp.gender=='0'?'女':'男'}"></td>
-									<td th:text="${emp.department.departmentName}"></td>
-									<td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td>
-										<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
-										<button class="btn btn-sm btn-danger deleteBtn" th:attr="delete_uri=@{/emp/}+${emp.id}">删除</button>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<form id="deleteForm" action="" method="post">
-						<input type="hidden" name="_method" value="DELETE">
+					<form th:action="@{/emp}" method="post">
+
+						<div th:if="${emp!=null}">
+							<input type="hidden" name="id" th:value="${emp.id}">
+							<input type="hidden" name="_method" value="put">
+						</div>
+
+						<div class="form-group">
+							<label for="exampleInputPassword1">lastName</label>
+							<input name="lastName" th:value="${emp!=null}?${emp.lastName}" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						</div>
+
+						<div class="form-group">
+							<label for="exampleInputEmail1">Email address</label>
+							<input name="email" th:value="${emp!=null}?${emp.email}" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+						</div>
+
+						<div class="form-group">
+							<label class="radio-inline">
+								<input type="radio" name="gender" id="inlineRadio1" th:checked="${emp!=null}?${emp.gender==1}" value="1"> 男
+							</label>
+							<label class="radio-inline">
+								<input type="radio" name="gender" id="inlineRadio2" th:checked="${emp!=null}?${emp.gender==0}" value="0"> 女
+							</label>
+						</div>
+
+						<div class="form-group">
+							<select name="department.id" class="form-control">
+								<option th:value="${dept.id}" th:each="dept:${depts}" th:text="${dept.departmentName}"
+										th:selected="${emp!=null}?${dept.id == emp.department.id}"></option>
+							</select>
+						</div>
+
+						<div class="form-group">
+							<label for="Birth">Birth</label>
+							<input name="birth" th:value="${emp!=null}?${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm:ss')}" type="text" class="form-control" id="Birth" placeholder="Birth">
+						</div>
+
+						<button type="submit" class="btn btn-default" th:text="${emp!=null}?'修改':'添加'">Submit</button>
 					</form>
 				</main>
 			</div>
@@ -93,32 +99,19 @@
 		<!-- Bootstrap core JavaScript
     ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"></script>
-		<script type="text/javascript" src="asserts/js/popper.min.js"></script>
-		<script type="text/javascript" src="asserts/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" th:href="@{/asserts/js/jquery-3.2.1.slim.min.js}"></script>
+		<script type="text/javascript" src="asserts/js/popper.min.js" th:href="@{/asserts/js/popper.min.js}"></script>
+		<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:href="@{/asserts/js/bootstrap.min.js}" ></script>
 
 		<!-- Icons -->
-		<script type="text/javascript" src="asserts/js/feather.min.js"></script>
+		<script type="text/javascript" src="asserts/js/feather.min.js" th:href="@{/asserts/js/feather.min.js}"></script>
 		<script>
 			feather.replace()
 		</script>
 
 		<!-- Graphs -->
-		<script type="text/javascript" src="asserts/js/Chart.min.js"></script>
+		<script type="text/javascript" src="asserts/js/Chart.min.js" th:href="@{/asserts/js/Chart.min.js}"></script>
 		<script>
-
-			$(function (){
-				$('.deleteBtn').click(function (){
-					$('#deleteForm').attr('action',$(this).attr("delete_uri")).submit();
-					return false;
-				})
-			})
-
-
-
-
-
-
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
 				type: 'line',
